gitops/manifests/portfolio/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio
  namespace: portfolio
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`richard.pearsalls.fr`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: kube-system
      services:
        - name: portfolio
          port: 80
